// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MaskedTextInput /> should renders correctly with an accessory view 1`] = `
Array [
  <TextInput
    allowFontScaling={true}
    inputAccessoryViewID="Done"
    onChangeText={[Function]}
    rejectResponderTermination={true}
    underlineColorAndroid="transparent"
    value="$0.00"
  />,
  <RCTInputAccessoryView
    nativeID="Done"
    style={
      Array [
        undefined,
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={Object {}}
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Clear text
        </Text>
      </View>
    </View>
  </RCTInputAccessoryView>,
]
`;

exports[`<MaskedTextInput /> should renders correctly with currency mask 1`] = `
<TextInput
  allowFontScaling={true}
  onChangeText={[Function]}
  rejectResponderTermination={true}
  underlineColorAndroid="transparent"
  value="$0.00"
/>
`;

exports[`<MaskedTextInput /> should renders correctly with custom mask 1`] = `
<TextInput
  allowFontScaling={true}
  onChangeText={[Function]}
  rejectResponderTermination={true}
  underlineColorAndroid="transparent"
  value=""
/>
`;
